# BankBD

./: LICENSE  README.md
ClientBD/: CMakeLists.txt  script
ClientBD/src/: Client.cpp  Client.cpp~  Client.h  Client.h~  main.cpp  main.cpp~
DataBaseScript/: BankBD.sql
ServerBD/: CMakeLists.txt  script
ServerBD/src/: Server.cpp  Server.h  SignInPSQL.cpp  SignInPSQL.h  main.cpp
